<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Windows.RegisterWindow">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_back"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:id="@+id/interaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_below="@+id/btn_back">

        <EditText
            android:id="@+id/str_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_solid_black"
            android:layout_marginVertical="15dp"
            android:textSize="18dp"
            android:hint="@string/wr_name"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/str_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_solid_black"
            android:layout_marginVertical="15dp"
            android:textSize="18dp"
            android:hint="@string/wr_email"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/str_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_solid_black"
            android:layout_marginVertical="15dp"
            android:textSize="18dp"
            android:hint="@string/wr_password"
            android:padding="15dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_below="@+id/interaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_firscreen"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:text="@string/log_str"
        android:layout_marginTop="100dp"/>

</RelativeLayout>