<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_edit_goal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeText"
        style="@style/TextAppear"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/posText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pos"
        style="@style/TextAppear"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/edit_achieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_solid_white"
        android:layout_marginVertical="15dp"
        android:textSize="18dp"
        android:hint="@string/wr_name"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interaction"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_white"
        android:text="@string/Change"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"/>

</LinearLayout>