<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dg_white_corner">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back_dg"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changName"
        style="@style/TextAppearBlack"
        android:textSize="22dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/interaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_below="@+id/btn_back">

        <EditText
            android:id="@+id/str_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_solid_black"
            android:layout_marginVertical="15dp"
            android:textSize="18dp"
            android:hint="@string/wr_name"
            android:padding="15dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_name_ch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePick"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_button_firscreen"
        android:text="@string/Change"
        android:textColor="@color/white" />

</LinearLayout>