<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dg_white_corner"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back_dg"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            style="@style/TextAppearBlack"
            android:textSize="24dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:letterSpacing="0.05"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/checkHowUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annotation"
                    style="@style/TextAppearBlack"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_down"/>

            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/textHowUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howUse"
                android:layout_margin="12dp"
                android:textSize="15dp"
                style="@style/TextAppearBlack"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="5dp"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/checkHowAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/howAdd"
                    style="@style/TextAppearBlack"
                    android:textSize="20dp"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_down"/>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/descAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noAch"
                    android:layout_margin="12dp"
                    android:textSize="15dp"
                    style="@style/TextAppearBlack"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="5dp"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:src="@drawable/non_ach"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textAdd"
                    android:layout_margin="12dp"
                    android:textSize="15dp"
                    style="@style/TextAppearBlack"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="5dp"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:src="@drawable/yes_ach"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>