<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4000000"
    android:gravity="center">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_exit"
        android:layout_margin="15dp"
        android:layout_gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/isComplete"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                style="@style/TextAppear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_solid_white"
                android:text="@string/no"
                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                style="@style/TextAppear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_solid_white"
                android:text="@string/yes"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>