<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screen.HomeFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:id="@+id/time_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19:55"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:fontFamily="@font/comfortaa"/>

            <TextView
                android:id="@+id/day_and_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monday, 15 oct"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:fontFamily="@font/comfortaa"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve"
                    style="@style/TextAppear"
                    android:textSize="24dp"
                    android:layout_marginVertical="15dp"/>

                <TextView
                    android:id="@+id/cntAch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppear"
                    android:textColor="@color/teal_700"
                    android:textSize="18dp"
                    android:text="5/5"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:id="@+id/btn_add"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_add_white"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"/>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/havt_achieve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/havt_achieve"
                            android:gravity="center"
                            style="@style/TextAppearBlack"
                            android:textSize="22dp"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/go_to_achieveActivity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/interaction"
                            android:layout_marginHorizontal="50dp"
                            android:layout_marginVertical="30dp"
                            android:text="@string/add_first"
                            android:textColor="@color/black"
                            android:background="@drawable/btn_solid_black" />

                    </LinearLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>