<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screen.ProfileFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                style="@style/TextAppear"
                android:textSize="24dp"
                android:layout_marginRight="30dp"/>

            <ImageView
                android:id="@+id/edit_name"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_edit"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="18dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="43dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="45dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S"
                android:textSize="20dp"
                style="@style/TextAppear"
                android:layout_marginLeft="43dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeAlarm"
                    style="@style/TextAppear"
                    android:textSize="22dp"
                    android:layout_marginRight="30dp"/>

                <ImageView
                    android:id="@+id/edit_time"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    android:layout_gravity="center"/>

            </LinearLayout>


            <TextView
                android:id="@+id/textAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="8:30"
                style="@style/TextAppear"
                android:textColor="@color/teal_700"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ckAch"
                    style="@style/TextAppearBlack"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_mark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_solid_black"
                    android:text="@string/choose"
                    style="@style/TextAppearBlack"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#90CAF9"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search"
                        android:layout_marginHorizontal="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Look at all achieves"
                        style="@style/TextAppear"
                        android:textSize="20dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_annotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#90CAF9"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ann"
                        android:layout_marginHorizontal="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        style="@style/TextAppear"
                        android:textSize="20dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>



</ScrollView>